# pytest-vigil

./: CHANGELOG.md  README.md  pyproject.toml
docs/: PUBLISHING.md
src/pytest_vigil/: plugin.py
src/pytest_vigil/config/: settings.py
src/pytest_vigil/domains/reliability/: models.py  services.py
src/pytest_vigil/infrastructure/enforcement/: interrupt.py  signals.py
src/pytest_vigil/infrastructure/monitoring/: loop.py  session.py  system.py
tests/: test_ci_multiplier.py  test_cli_report.py  test_config.py  test_edge_cases.py  test_integration.py  test_integration_xdist.py  test_json_report.py  test_markers.py  test_resource_limits.py  test_retry_mechanism.py  test_session_timeout.py  test_stall_detection.py  test_xdist.py
